syntax = "proto3";
package i6getraenkeabrechnungssystem3000.rpc;
option go_package = "rpc";

service TerminalBackend {
    rpc GetState(TerminalStateRequest) returns (TerminalStateResponse) {}
    rpc Buy(TerminalBuyRequest) returns (TerminalBuyResponse) {}
    rpc Scan(TerminalScanRequest) returns (TerminalScanResponse) {}
    rpc Abort(AbortRequest) returns (AbortResponse) {}
}

message TerminalStateRequest {
    string TerminalID = 1;
}

message TerminalStateResponse {
    message Account {
        string ID = 1;
        string DisplayName = 2;
        sint32 Balance = 3;
    }
    message Order {
        string DisplayName = 1;
        sint32 UnitPrice = 2;
        uint32 Amount = 3;
    }
    repeated Account Accounts = 1;
    repeated Order OrderList = 2;
}

message TerminalBuyRequest {
    string TerminalID = 1;
    string AccountID = 2;
}

message TerminalBuyResponse {
    string Error = 1;
}

message TerminalScanRequest {
    string TerminalID = 1;
    string ProductID = 2;
}

message TerminalScanResponse {
    string Error = 1;
}

message AbortRequest {
	string TerminalID = 1;
}

message AbortResponse {
	string Error = 1;
}
